<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/day_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textColor="#354991"/>

    <TextView
        android:id="@+id/day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <!--FROM-->
    <TextView
        android:id="@+id/from_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="#354991"/>

    <TextView
        android:id="@+id/from_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    <!--TO-->
    <TextView
        android:id="@+id/to_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="#354991"/>

    <TextView
        android:id="@+id/to_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>